--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link href="./public/style/output.css" rel="stylesheet" />
 
     <link
@@ -13,40 +12,49 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <title>
-      Frontend Mentor | Newsletter sign-up form with success message
-    </title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Ethanosaure | Newsletter sign-up form with success message</title>
   </head>
-  <body>
-    <!-- Sign-up form start -->
-    <div>
-      Stay updated! Join 60,000+ product managers receiving monthly updates on:
-      Product discovery and building what matters Measuring to ensure updates
-      are a success And much more! Email address email@company.com Subscribe to
-      monthly newsletter
-
-      <!-- Sign-up form end -->
-
-      <!-- Success message start -->
-
-      Thanks for subscribing! A confirmation email has been sent to
-      ash@loremcompany.com. Please open it and click the button inside to
-      confirm your subscription. Dismiss message
-
-      <!-- Success message end -->
+  <body class="flex flex-col items-center justify-center">
+    <div class="w-93 xl: flex flex-row items-center justify-center">
+      <div class="flex flex-col items-center justify-center">
+        <img
+          src="./assets/images/illustration-sign-up-mobile.svg"
+          alt="signup image"
+          class="xl:hidden"
+        />
+        <h1>Stay updated!</h1>
+        <span>Join 60,000+ product managers receiving monthly updates on:</span>
+        <ul>
+          <li>Product discovery and building</li>
+          <li>what matters Measuring to ensure updates are a success</li>
+          <li>And much more!</li>
+        </ul>
+        <div>
+          <h3>Email address</h3>
+          <input type="email" placeholder="email@company.com" />
+          <button type="submit">Subscribe to monthly newsletter</button>
+        </div>
+      </div>
+      <div>
+        <img
+          src="./assets/images/illustration-sign-up-desktop.svg"
+          alt="signup image"
+          class="hidden xl:flex"
+        />
+      </div>
     </div>
+
+    <div class="SuccessMessage">
+      <img src="./assets/images/icon-success.svg" alt="success icon" />
+      <h1>Thanks for subscribing!</h1>
+      <p>
+        A confirmation email has been sent to
+        <strong>ash@loremcompany.com.</strong> Please open it and click the
+        button inside to confirm your subscription.
+      </p>
+      <button type="submit">Dismiss message</button>
+    </div>
+
     <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
