structuring the repo

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="./public/images/favicon-32x32.png"
     />
 
     <title>Ethanosaure | Newsletter sign-up form with success message</title>
   </head>
   <body class="flex flex-col items-center justify-center">
-    <div class="w-93 xl: flex flex-row items-center justify-center">
+    <div
+      class="w-[375]px xl: w-800px flex flex-row items-center justify-center"
+    >
       <div class="flex flex-col items-center justify-center">
         <img
-          src="./assets/images/illustration-sign-up-mobile.svg"
+          src="./public/images/illustration-sign-up-mobile.svg"
           alt="signup image"
           class="xl:hidden"
         />
-        <h1>Stay updated!</h1>
+        <h1 class="mb-7 mt-12">Stay updated!</h1>
         <span>Join 60,000+ product managers receiving monthly updates on:</span>
         <ul>
           <li>Product discovery and building</li>
@@ -37,7 +39,7 @@
       </div>
       <div>
         <img
-          src="./assets/images/illustration-sign-up-desktop.svg"
+          src="./public/images/illustration-sign-up-desktop.svg"
           alt="signup image"
           class="hidden xl:flex"
         />
@@ -45,7 +47,7 @@
     </div>
 
     <div class="SuccessMessage">
-      <img src="./assets/images/icon-success.svg" alt="success icon" />
+      <img src="./public/images/icon-success.svg" alt="success icon" />
       <h1>Thanks for subscribing!</h1>
       <p>
         A confirmation email has been sent to
