--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <title>Ethanosaure | Newsletter sign-up form with success message</title>
   </head>
   <body
-    class="flex h-[800px] flex-col items-center justify-center bg-darkSlateGrey"
+    class="flex h-[900px] flex-col items-center justify-center bg-darkSlateGrey"
   >
     <div
       id="newsletter"
-      class="flex w-[375px] flex-row items-center justify-center rounded-xl bg-white xl:w-[800px] xl:pl-[10px]"
+      class="flex w-[375px] flex-row items-center rounded-xl bg-white xl:w-[800px] xl:pl-[10px]"
     >
       <div class="flex flex-col items-center justify-center xl:w-[50%]">
         <img
@@ -34,30 +34,39 @@
           >Join 60,000+ product managers receiving monthly updates on:</span
         >
         <ul
-          class="ml-[10px] w-[280px] list-outside text-[16px] xl:ml-0 xl:mr-[20px]"
+          class="ml-[10px] flex w-[90%] flex-col text-[16px] xl:ml-0 xl:mr-[20px]"
         >
-          <li class="mb-[10px] mt-[10px] pl-[10px] text-left xl:w-[400px]">
+          <li
+            class="mb-[10px] mt-[10px] flex items-start xl:ml-[10px] xl:w-[400px]"
+          >
+            <img src="./public/images/icon-list.svg " class="mr-[10px]" />
             Product discovery and building what matters
           </li>
-          <li class="mb-[10px] pl-[10px] text-left xl:w-[400px]">
+          <li class="mb-[10px] flex items-start xl:ml-[10px] xl:w-[400px]">
+            <img src="./public/images/icon-list.svg" class="mr-[10px]" />
             Measuring to ensure updates are a success
           </li>
-          <li class="mb-[10px] pl-[10px] text-left xl:mb-0">And much more!</li>
+          <li class="mb-[10px] flex items-start xl:mb-0 xl:ml-[10px]">
+            <img src="./public/images/icon-list.svg" class="mr-[10px]" />
+            And much more!
+          </li>
         </ul>
         <div class="ml-[25px] mt-[40px]">
           <h3 class="mb-[7px] font-thin">Email address</h3>
-          <input
-            id="emailInput"
-            type="email"
-            placeholder="email@company.com"
-            class="mb-[20px] h-[50px] w-[325px] rounded-md border border-solid border-grey pl-[20px] font-medium text-charcoalGrey xl:w-[350px]"
-          />
-          <button
-            type="submit"
-            class="mb-[50px] h-[50px] w-[325px] rounded-md border border-solid bg-darkSlateGrey font-medium text-white xl:w-[350px]"
-          >
-            Subscribe to monthly newsletter
-          </button>
+          <form>
+            <input
+              id="emailInput"
+              type="email"
+              placeholder="email@company.com"
+              class="mb-[20px] h-[50px] w-[325px] rounded-md border border-solid border-grey pl-[20px] font-medium text-charcoalGrey xl:w-[350px]"
+            />
+            <button
+              type="submit"
+              class="hover:from-salmon hover:to-orange mb-[50px] h-[50px] w-[325px] rounded-md border border-solid bg-darkSlateGrey bg-gradient-to-r font-medium text-white xl:w-[350px]"
+            >
+              Subscribe to monthly newsletter
+            </button>
+          </form>
         </div>
       </div>
       <div class="xl:h-[90%] xl:w-[50%]">
