finishing css for success msg + responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   >
     <div
       id="newsletter"
-      class="flex w-[375px] flex-row items-center rounded-xl bg-white xl:w-[800px] xl:pl-[10px]"
+      class="flex hidden w-[375px] flex-row items-center rounded-xl bg-white xl:w-[800px] xl:pl-[10px]"
     >
       <div class="flex flex-col items-center justify-center xl:w-[50%]">
         <img
@@ -57,19 +57,21 @@
           <div id="errorElement" class="flex flex-row justify-between">
             <h3 class="mb-[7px] font-thin">Email address</h3>
           </div>
-          <input
-            id="emailInput"
-            type="email"
-            placeholder="email@company.com"
-            class="mb-[20px] h-[50px] w-[325px] rounded-md border border-solid border-grey pl-[20px] font-medium text-charcoalGrey xl:w-[350px]"
-          />
-          <button
-            id="submitButton"
-            type="button"
-            class="mb-[50px] h-[50px] w-[325px] rounded-md border border-solid bg-darkSlateGrey bg-gradient-to-r font-medium text-white hover:from-salmon hover:to-orange xl:w-[350px]"
-          >
-            Subscribe to monthly newsletter
-          </button>
+          <form id="form">
+            <input
+              id="emailInput"
+              type="email"
+              placeholder="email@company.com"
+              class="mb-[20px] h-[50px] w-[325px] rounded-md border border-solid border-grey pl-[20px] font-medium text-charcoalGrey xl:w-[350px]"
+            />
+            <button
+              id="submitButton"
+              type="submit"
+              class="mb-[50px] h-[50px] w-[325px] rounded-md border border-solid bg-darkSlateGrey bg-gradient-to-r font-medium text-white hover:from-salmon hover:to-orange xl:w-[350px]"
+            >
+              Subscribe to monthly newsletter
+            </button>
+          </form>
         </div>
       </div>
       <div class="xl:h-[90%] xl:w-[50%]">
@@ -81,15 +83,35 @@
       </div>
     </div>
 
-    <div id="SuccessMessage" class="show:visible hidden">
-      <img src="./public/images/icon-success.svg" alt="success icon" />
-      <h1>Thanks for subscribing!</h1>
-      <p>
+    <div
+      id="SuccessMessage"
+      class="visible flex h-[80%] w-[375px] flex-col justify-center bg-white xl:h-auto xl:w-[440px] xl:items-start xl:rounded-xl xl:border xl:border-solid xl:border-white"
+    >
+      <img
+        src="./public/images/icon-success.svg"
+        alt="success icon"
+        class="mb-[20px] ml-[30px] w-12 xl:mb-[40px] xl:ml-[40px] xl:mt-[40px]"
+      />
+      <h1
+        class="mb-[20px] ml-[30px] w-[200px] leading-8 xl:mb-[40px] xl:ml-[40px] xl:w-[280px] xl:text-[50px]"
+      >
+        Thanks for subscribing!
+      </h1>
+      <p
+        class="ml-[30px] w-[350px] font-medium leading-5 xl:mb-[40px] xl:ml-[40px] xl:text-xs"
+      >
         A confirmation email has been sent to
-        <strong>ash@loremcompany.com.</strong> Please open it and click the
-        button inside to confirm your subscription.
+        <strong class="userEmail">ash@loremcompany.com.</strong> Please open it
+        and click the button inside to confirm your subscription.
       </p>
-      <button type="submit">Dismiss message</button>
+      <form id="dismissForm">
+        <button
+          type="submit"
+          class="ml-[30px] mt-[200px] rounded-md border border-solid bg-darkSlateGrey bg-gradient-to-r pb-[15px] pl-[100px] pr-[100px] pt-[15px] text-white hover:from-salmon hover:to-orange xl:mb-[50px] xl:ml-[40px] xl:mt-[0] xl:pl-[100px] xl:pr-[100px]"
+        >
+          Dismiss message
+        </button>
+      </form>
     </div>
 
     <!-- <div class="attribution">
