--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   >
     <div
       id="newsletter"
-      class="flex hidden w-[375px] flex-row items-center rounded-xl bg-white xl:w-[800px] xl:pl-[10px]"
+      class="visible flex w-[375px] flex-row items-center rounded-xl bg-white xl:w-[800px] xl:pl-[10px]"
     >
       <div class="flex flex-col items-center justify-center xl:w-[50%]">
         <img
@@ -54,7 +54,10 @@
           </li>
         </ul>
         <div class="ml-[25px] mt-[40px]">
-          <div id="errorElement" class="flex flex-row justify-between">
+          <div
+            id="errorElement"
+            class="flex w-[325px] flex-row justify-between xl:w-[350px]"
+          >
             <h3 class="mb-[7px] font-thin">Email address</h3>
           </div>
           <form id="form">
@@ -85,7 +88,7 @@
 
     <div
       id="SuccessMessage"
-      class="visible flex h-[80%] w-[375px] flex-col justify-center bg-white xl:h-auto xl:w-[440px] xl:items-start xl:rounded-xl xl:border xl:border-solid xl:border-white"
+      class="flex hidden h-[80%] w-[375px] flex-col justify-center bg-white xl:h-auto xl:w-[440px] xl:items-start xl:rounded-xl xl:border xl:border-solid xl:border-white"
     >
       <img
         src="./public/images/icon-success.svg"
@@ -101,8 +104,8 @@
         class="ml-[30px] w-[350px] font-medium leading-5 xl:mb-[40px] xl:ml-[40px] xl:text-xs"
       >
         A confirmation email has been sent to
-        <strong class="userEmail">ash@loremcompany.com.</strong> Please open it
-        and click the button inside to confirm your subscription.
+        <strong id="userEmail"></strong> Please open it and click the button
+        inside to confirm your subscription.
       </p>
       <form id="dismissForm">
         <button
