--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./public/style/output.css" rel="stylesheet" />
-    <!-- <script src="./src/index.js"></script> CICD -->
-    <script src="./dist/src/index.js" type="module" defer></script>
+    <script src="./src/index.js"></script>
+    <!-- <script src="./dist/src/index.js" type="module" defer></script> -->
 
     <link
       rel="icon"
@@ -119,12 +119,5 @@
         <div class="spacer"></div>
       </div>
     </div>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Ethanosaure</a>.
-    </div> -->
   </body>
 </html>
