--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./public/style/output.css" rel="stylesheet" />
-    <script src="./src/index.js"></script>
+    <script src="./src/index.js" type="module" defer></script>
     <!-- <script src="./dist/src/index.js" type="module" defer></script> -->
 
     <link
